Fix z-index conflict for some floating components

--- a/sass/src/Fullmap.scss
+++ b/sass/src/Fullmap.scss
@@ -159,7 +159,7 @@
   background-color: var(--primary-main);
 }
 
-.map-attributions-wrapper {
+.underlay-z-index {
   z-index: 1 !important;
 }
 
